2006-04-28  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile_insert, src/Makefile.am, src/dir-util-test.h,
	  src/dir-util-test.cpp, src/extract-uri-test.h,
	  src/extract-uri-test.cpp:
	  Replaced two tests with CxxTest versions.

2006-04-28  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile_insert, src/MultiPrinter.h, src/verbs.h,
	  src/verbs-test.h:
	  Adding unit test for verbs.

2006-04-27  verbalshadow <verbalshadow@gmail.com>
	
	* src/io/resource.h, src/io/resource.cpp, 
	  src/dialogs/swatches.cpp, src/helper/stock-items.cpp:
	  Added CREATE v0.1 support for gradients/swatches/patterns
	  Support for Linux & Win32. Mac support waiting final support
	  Directory info.

2006-04-26  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile.am, src/MultiPrinter.h, src/PylogFormatter.h,
	  src/TRPIFormatter.h, src/selfname.tpl, src/libnr/Makefile_insert,
	  src/svg/Makefile_insert, src/xml/Makefile_insert:
	  Adding multiple test output formats.

2006-04-23  verbalshadow  <verbalshadow@gmail.com>

    * path-prefix.h:
	  Added beginnings of CREATE support in path-prefix.h

2006-04-23  verbalshadow  <verbalshadow@gmail.com>

    * src/object-ui.cpp, src/object-ui.h:
	  moved to src/ui/context-menu.cpp, src/ui/context-menu.h
	  to make it easier to find

2006-04-20  MenTaLguY  <mental@rydia.net>

    * src/dyna-draw-context.cpp, src/dyna-draw-context.h:
	  remove unused timer code

2006-04-19 Andrius R. <knutux@gmail.com>
	* src\display\nr-arena-item.cpp, src\display\canvas-arena.cpp,
	  src\display\nr-arena-shape.cpp, src\display\sp-canvas.h,
	  src\display\nr-arena.cpp, src\display\nr-arena-shape.h,
	  src\display\nr-arena-glyphs.cpp, src\display\nr-gradient-gpl.cpp,
	  src\display\sp-canvas.cpp, src\display\sp-ctrlline.cpp,
	  src\livarot\ShapeSweep.cpp, src\livarot\Shape.h, src\livarot\Shape.cpp,
	  src\livarot\Path.h, src\livarot\PathConversion.cpp,
	  src\livarot\ShapeMisc.cpp, src\livarot\Path.cpp, src\libnr\nr-pixblock.h,
	  src\libnr\nr-pixblock.cpp
